--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-grub2 (2.04-17) UNRELEASED; urgency=medium
+grub2 (2.04-17) unstable; urgency=medium
 
   * Pass --sbat when building the d-i netboot image as well.
   * i386-pc: build verifiers API as module (thanks, Michael Chang; closes:
     #984488, #985374).
 
- -- Colin Watson <cjwatson@debian.org>  Wed, 03 Mar 2021 11:15:15 +0000
+ -- Colin Watson <cjwatson@debian.org>  Fri, 19 Mar 2021 10:41:41 +0000
 
 grub2 (2.04-16) unstable; urgency=medium
 
