--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ grub2 (2.04-18) unstable; urgency=medium
 
   * Enable the shim_lock and tpm modules for i386-efi too. Ensure that
     tpm is included in our EFI images.
+  * List the modules we include the EFI images - make it easier to
+    debug things.
 
  -- Steve McIntyre <93sam@debian.org>  Fri, 16 Apr 2021 23:51:18 +0100
 
