--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-grub2 (2.04-20) UNRELEASED; urgency=medium
+grub2 (2.04-20) unstable; urgency=medium
 
   [ Mathieu Trudel-Lapierre ]
   * tpm: Pass unknown error as non-fatal, but debug print the error we got
     (closes: #940911, LP: #1848892).
 
- -- Colin Watson <cjwatson@debian.org>  Sat, 10 Jul 2021 22:31:05 +0100
+ -- Colin Watson <cjwatson@debian.org>  Sun, 11 Jul 2021 00:37:36 +0100
 
 grub2 (2.04-19) unstable; urgency=medium
 
