Added Gooroom Patchset
Change-Id: Ia917f43d0dde1332d323ac4abf2a15c5254c48e9

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gooroom-grub (2.06-3+dev) gooroom-3.0; urgency=medium
+
+  * Rebased on gooroom-3.0
+
+ -- jongkyung.woo <jkwoo@gooroom.kr>  Sat, 02 Jul 2022 18:24:51 +0900
+
 grub2 (2.06-3) unstable; urgency=medium
 
   [ Colin Watson ]
