--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gooroom-grub (2.06-3+dev) gooroom-3.0; urgency=medium
+gooroom-grub (2.06-3+grm3u1) gooroom-3.0; urgency=medium
 
   * Rebased on gooroom-3.0
 
