--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gooroom-grub (2.06-13+deb12u1+grm4u2) bookworm; urgency=medium
+
+  [ jongkyung.woo ]
+  * [2ab0537c] Rebased on gooroom-4.0
+
+ -- Gooroom Autobuilder <jenkins@gooroom.kr>  Tue, 19 Mar 2024 15:18:41 +0900
+
 gooroom-grub (2.06-13+deb12u1+grm4u1) gooroom-4.0; urgency=medium
 
   * Rebased on gooroom-4.0
